--- a/index.html
+++ b/index.html
@@ -24,71 +24,7 @@
                 0
             </article>
         </header>
-        <article class="game__board border border--convex">
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
-            <div class="cell border border--concave"></div>
+        <article class="game__board border border--convex" data-game>
         </article>
         <article class="game__panel border--convex border">
             <header class="panel__header">
