add cell functionality add flags add isReveal functionality render cells for equivalent level

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 0
             </article>
         </header>
-        <article class="game__board border border--convex" data-game>
+        <article class="game__board border border--convex" data-board>
         </article>
         <article class="game__panel border--convex border">
             <header class="panel__header">
