--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 <body>
     <main class="game">
         <header class="header border border--convex">
-            <article class="header__counter">0</article>
+            <article class="header__counter counterType" data-counter>0</article>
             <button class="header__reset border border--concave">
                 <svg class="header__button">
                     <use href="./assets/sprite.svg#neutral"></use>
                 </svg>
             </button>
-            <article class="header__counter">
-                0
-            </article>
+            <article class="header__counter" data-timer>0</article>
         </header>
         <article class="game__board border border--convex" data-board>
         </article>
